# halal-multimedia

./: .gitignore  README.md
mediaservice/src/: Makefile  media.workspace  media.workspace.layout
mediaservice/src/IntelCodec/: IntelCodec.cbp  IntelCodec.cbp.mak  IntelCodec.depend  IntelCodec.layout  IntelVideoDecoder.cpp  IntelVideoDecoder.h  IntelVideoEncoder.cpp  IntelVideoEncoder.h  intelCodec.pro  main.cpp  pipeline_decode.cpp  pipeline_encode.cpp  sample_encode.cpp  testmain.cpp
mediaservice/src/capture/: capture.cbp  capture.cbp.mak  capture.cpp  capture.depend  capture.h  capture.layout  cscope.out  main.cpp  stdafx.h
mediaservice/src/client/: client.cbp  client.cbp.mak  client.cscope_file_list  client.depend  client.layout  cscope.out  main.cpp  post_build.sh
mediaservice/src/dom/: DomSite.cpp  DomSite.h  EventPoint.cpp  EventPoint.h  Library.cpp  Library.h  MemProfile.cpp  MemProfile.h  Module.cpp  Module.h  dom.cbp  dom.cpp  dom.depend  dom.h  dom.layout  main.cpp
mediaservice/src/ffmpeg/: FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  FFmpegAudioEncoder.cpp  FFmpegAudioEncoder.h  FFmpegAudioResample.cpp  FFmpegAudioResample.h  FFmpegDemuxer.cpp  FFmpegDemuxer.h  FFmpegMuxer.cpp  FFmpegMuxer.h  FFmpegOSD.cpp  FFmpegOSD.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.h  FFmpegVideoScale.cpp  FFmpegVideoScale.h  MediaType.cpp  MediaType.h  cscope.out  ffmpeg.cbp  ffmpeg.depend  ffmpeg.layout  get_pps_sps.txt  main.cpp  stdafx.h
mediaservice/src/gosun/: GosunDemuxer.cpp  GosunDemuxer.h  GosunMuxer.cpp  GosunMuxer.h  GosunSession.cpp  GosunSession.h  gosun.cbp  gosun.cbp.mak  gosun.depend  gosun.layout  main.cpp  stdafx.h
mediaservice/src/hls/: <invalid path>  DHttpHeader.cpp  DHttpHeader.hpp  HttpParser.cpp  HttpParser.hpp  HttpSession.cpp  HttpSession.h  TsDemuxer.cpp  TsDemuxer.h  TsMuxer.cpp  TsMuxer.h  auto_buffer.h  hls.cbp  hls.depend  hls.layout  m3u8parser.h  main.cpp  stdafx.h
mediaservice/src/hls/bits/: CMakeLists.txt  ReadMe.txt  bbits.cpp  bbits.h  config.h  get_bits.h  golomb_.cpp  main.cpp  post_link.bat  post_link.sh  put_bits.h
mediaservice/src/hls/bits/libavutil/: bprint.c  internal.h  version.h
mediaservice/src/hls/tsmuxer/: BitWriter.cpp  BitWriter.h  Makefile.am  MemoryCache.cpp  MemoryCache.h  Stdafx.cpp  TsMuxer.cpp  TsMuxer.h  bitstreamfilter.cpp  bitstreamfilter.h  configure.ac  libmpeg_sink.h  mpeg2.pc.in  post_link.sh  stdafx.h
mediaservice/src/inc/: MediaID.h  dom.h  dom_ptr.h  dom_site.h  iGraphBuilder.h  iMediaService.h  iMulitimedia.h  iProfile.h  iStream.h  interface.h  interface_imp.h  time_expend.h
mediaservice/src/mulitimedia/: ApiSession.cpp  ApiSession.h  FileSession.cpp  FileSession.h  FilterGraph.cpp  FilterGraph.h  GraphBuilder.cpp  GraphBuilder.h  InputPin.cpp  InputPin.h  MediaFrame.cpp  MediaFrame.h  MediaService.cpp  MediaService.h  OutputPin.h  (+10 more)
transcode/transcode/: Makefile  media.workspace  media.workspace.layout
(+281 files in other folders)
